# rb-rca5-cowsay

./: .gitignore  bigworld.launch  gazebo_ros_server.sh
SmartAssRobot/: CMakeLists.txt  build_compile.sh  graph1.cpp  graph1.h
SmartAssRobot/.clangd/index/: Graph.cpp.C6F334FF7470A1E6.idx  Graph.hpp.513568DE4CDD1C63.idx  Matlab_tests.cpp.C711BA1682482053.idx  QL_circle_test.cpp.3675157CFF271816.idx  QLearner.cpp.EDF7E20CE14AE204.idx  Q_Agent.cpp.FAE8F74073E7A170.idx  Q_Agent.hpp.8E1DDAC3E86D9F16.idx  SimpleRobotControl.cpp.D9D436771359E99E.idx  SimpleRobotControl.hpp.74F4B7223E7422DF.idx  SimpleRobotControlGazebo.hpp.DA3A0E0CFEBEE75D.idx  SimpleRobotControllerInstance.cpp.87BE37DFAF3FCF6E.idx  Vision.cpp.7491BDCDFDE6FF2B.idx  Vision.h.92316528FF713704.idx  WilmMain.cpp.C9E3CBDF58C5F314.idx  fuzzyEngine.cpp.CFE18C3D02FC8658.idx  fuzzyEngine.hpp.0FDB8DC9EAB262CF.idx  marbleDetection1.cpp.0AFDA75A38244E9F.idx
SmartAssRobot/Classes/: CMakeLists.txt
SmartAssRobot/Classes/Agent/: CMakeLists.txt  Graph.cpp  Graph.hpp  Q_Agent.cpp  Q_Agent.hpp
SmartAssRobot/Classes/Camera/: Vision.cpp  Vision.h
SmartAssRobot/Classes/Lidar/: brushfire.cpp  brushfire.h  brushfireal.cpp  brushfireal.h  featureextractor.cpp  featureextractor.h  graph.cpp  graph.h  laserscanner.cpp  laserscanner.h  localization.cpp  localization.h  locate.cpp  locate.h  particalfilter.cpp  particalfilter.h  path_planning.cpp  path_planning.h
SmartAssRobot/Classes/Robot/: .gitignore  Fuzzy.cpp  Fuzzy.h  Robot.cpp  Robot.h  SimpleRobotControl.cpp  SimpleRobotControl.hpp  SimpleRobotControlGazebo.cpp  SimpleRobotControlGazebo.hpp  SimpleRobotControllerEngine.fll  fuzzyEngine.cpp  fuzzyEngine.cpp.in  fuzzyEngine.hpp
SmartAssRobot/Mains/: CMakeLists.txt  FuzzyControlActivationRate.cpp  Matlab_tests.cpp  QL_circle_test.cpp  QLearner.cpp  SimpleRobotControllerInstance.cpp  WilmMain.cpp  brushfire_test.cpp  localization.cpp  locate_test.cpp  marbleDetection1.cpp  marbleDetectionTestArea.cpp  node_test.cpp
SmartAssRobot/Matlab/: CircleTestSideView.pdf_tex  CircleTestSideView100000.pdf_tex  CircleTestTopView.pdf_tex  CircleTestTopView100000.pdf_tex  marbles_per_episode.m  parallelJobs.sh  patience.m
SmartAssRobot/Matlab/Fuzzy/: ActiMarbCathcer.txt  ActivationRate.txt  ObsDisSpeed.pdf_tex  ObsDisSteer.pdf_tex  SpeErr.pdf_tex  SteErr.pdf_tex  SteSpeErr.pdf_tex  fuzzyPlot.m
SmartAssRobot/Matlab/Mon 02 Dec 2019 01:31:04 PM CET/: test_circle_episodes_10000_nodes_20_lambda_0.7_epsilon_1_alpha_2_freq_50.csv  test_circle_episodes_10000_nodes_20_lambda_0.7_epsilon_1_alpha_4_freq_50.csv  test_circle_episodes_10000_nodes_20_lambda_0.7_epsilon_2_alpha_2_freq_50.csv  test_circle_episodes_10000_nodes_20_lambda_0.7_epsilon_2_alpha_5_freq_50.csv  test_circle_episodes_10000_nodes_20_lambda_0.7_epsilon_2_alpha_6_freq_50.csv  test_circle_episodes_10000_nodes_20_lambda_0.7_epsilon_2_alpha_7_freq_50.csv  test_circle_episodes_10000_nodes_20_lambda_0.7_epsilon_2_alpha_8_freq_50.csv  test_circle_episodes_10000_nodes_20_lambda_0.7_epsilon_3_alpha_1_freq_50.csv  test_circle_episodes_10000_nodes_20_lambda_0.7_epsilon_3_alpha_3_freq_50.csv  test_circle_episodes_10000_nodes_20_lambda_0.7_epsilon_3_alpha_4_freq_50.csv  test_circle_episodes_10000_nodes_20_lambda_0.7_epsilon_3_alpha_8_freq_50.csv  test_circle_episodes_10000_nodes_20_lambda_0.7_epsilon_3_alpha_9_freq_50.csv  test_circle_episodes_10000_nodes_20_lambda_0.7_epsilon_4_alpha_3_freq_50.csv  test_circle_episodes_10000_nodes_20_lambda_0.7_epsilon_4_alpha_4_freq_50.csv  test_circle_episodes_10000_nodes_20_lambda_0.7_epsilon_4_alpha_6_freq_50.csv  test_circle_episodes_10000_nodes_20_lambda_0.7_epsilon_4_alpha_8_freq_50.csv  test_circle_episodes_10000_nodes_20_lambda_0.7_epsilon_4_alpha_9_freq_50.csv  test_circle_episodes_10000_nodes_20_lambda_0.7_epsilon_5_alpha_4_freq_50.csv  test_circle_episodes_10000_nodes_20_lambda_0.7_epsilon_5_alpha_5_freq_50.csv  test_circle_episodes_10000_nodes_20_lambda_0.7_epsilon_5_alpha_9_freq_50.csv  test_circle_episodes_10000_nodes_20_lambda_0.7_epsilon_6_alpha_1_freq_50.csv  test_circle_episodes_10000_nodes_20_lambda_0.7_epsilon_6_alpha_4_freq_50.csv  test_circle_episodes_10000_nodes_20_lambda_0.7_epsilon_6_alpha_8_freq_50.csv  test_circle_episodes_10000_nodes_20_lambda_0.7_epsilon_6_alpha_9_freq_50.csv  test_circle_episodes_10000_nodes_20_lambda_0.7_epsilon_7_alpha_7_freq_50.csv  test_circle_episodes_10000_nodes_20_lambda_0.7_epsilon_7_alpha_8_freq_50.csv  test_circle_episodes_10000_nodes_20_lambda_0.7_epsilon_7_alpha_9_freq_50.csv  test_circle_episodes_10000_nodes_20_lambda_0.7_epsilon_8_alpha_2_freq_50.csv  test_circle_episodes_10000_nodes_20_lambda_0.7_epsilon_8_alpha_4_freq_50.csv  test_circle_episodes_10000_nodes_20_lambda_0.7_epsilon_8_alpha_6_freq_50.csv  test_circle_episodes_10000_nodes_20_lambda_0.7_epsilon_8_alpha_7_freq_50.csv  test_circle_episodes_10000_nodes_20_lambda_0.7_epsilon_8_alpha_8_freq_50.csv  test_circle_episodes_10000_nodes_20_lambda_0.7_epsilon_8_alpha_9_freq_50.csv  test_circle_episodes_10000_nodes_20_lambda_0.7_epsilon_9_alpha_2_freq_50.csv  (+2 more)
fuzzy_robot_control/: CMakeLists.txt  main.cpp
robot_control/: CMakeLists.txt  ObstacleAvoidance.fll  main.cpp
robot_control/src/: .Vision.cpp.swp  ObstacleAvoidance.fll  Vision.cpp  Vision.h  debug.h  fuzzy.cpp  fuzzy.h  main.cpp
(+3530 files in other folders)
